[project]
name = "root"
version = "0.1.0"
description = ""
authors = [
    {name = "Tobias Boeckh",email = "boeckh.tobias@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "numpy (>=2.0)",
    "matplotlib (>=3.9)",
    "ipykernel (>=6.29.5,<7.0.0)"
]

[tool.poetry]
packages = [{include = "root", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
